Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <body>
         <main>
             <header>
-                <h1>Título do Site</h1>
+                <h1>Cursos Grátis</h1>
             </header>
             <article>
-                <h2>Artigo 001</h2>
-                <p>Texto Artigo 001</p>
+                <h2>Curso de HTML5 e CSS3</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, ipsa. Illo numquam aliquam architecto aspernatur impedit exercitationem perspiciatis enim, eaque, expedita eligendi voluptatum esse tempore, fuga commodi! Soluta, deleniti sit?</p>
             </article>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto Artigo 002</p>
+                <h2>Curso de JavaScrit</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem voluptas modi pariatur, quis nulla? Vero, deserunt quod. Nobis hic veniam laborum magni assumenda nulla laudantium possimus quam rerum ducimus.</p>
             </article>
         </main>
     </body>
